Add food-related model objects; fix form validation

--- a/src/main/webapp/WEB-INF/config/messages.properties
+++ b/src/main/webapp/WEB-INF/config/messages.properties
@@ -1,3 +1,10 @@
+NotNull=cannot be empty
+typeMismatch.food.servingSize=invalid serving size entered
+typeMismatch.food.calories=invalid calorie amount entered
+typeMismatch.food.carbsGrams=invalid carb amount entered
+typeMismatch.food.fatGrams=invalid fat amount entered
+typeMismatch.food.proteinGrams=invalid protein amount entered
+typeMismatch.food.fiberGrams=invalid fiber amount entered
 typeMismatch.usergoal.age=invalid age entered
 typeMismatch.usergoal.weightPounds=invalid weight entered
 typeMismatch.usergoal.heightFeet=invalid height(ft) entered
